--- a/src/Mrsuh/NewspaperBundle/Resources/config/parameters.yml
+++ b/src/Mrsuh/NewspaperBundle/Resources/config/parameters.yml
@@ -1,1 +1,6 @@
 parameters:
+    pay:
+        client_id: "%pay.client_id%"
+        redirect_uri: "%pay.redirect_uri%"
+        price: "%pay.price%"
+        wallet: "%pay.wallet%"
