--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -39,6 +39,8 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+    globals:
+        price: "%pay.price%"
 
 # Doctrine Configuration
 doctrine:
