--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     "sensio/distribution-bundle": "^5.0",
     "sensio/framework-extra-bundle": "^3.0.2",
     "incenteev/composer-parameter-handler": "^2.0",
-    "bobrovnikov/robokassa": "1.0"
+    "yandex-money/yandex-money-sdk-php": "3.0.*",
+    "symfony/proxy-manager-bridge": "~2.3"
   },
   "require-dev": {
     "sensio/generator-bundle": "^3.0",
