--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -1,25 +1,18 @@
-# This file is a "template" of what your parameters.yml file should look like
-# Set parameters here that may be different on each deployment target of the app, e.g. development, staging, production.
-# http://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
+# This file is auto-generated during the composer install
 parameters:
-    database_host:     127.0.0.1
-    database_port:     ~
-    database_name:     newspaper
-    database_user:     root
-    database_password: ~
-    # You should uncomment this if you want use pdo_sqlite
-    # database_path: "%kernel.root_dir%/data.db3"
-
-    mailer_transport:  mail
-    mailer_host:       127.0.0.1
-    mailer_user:       ~
-    mailer_password:   ~
-
-    # A secret key that's used to generate certain security-related tokens
-    secret:            ThisTokenIsNotSoSecretChangeIt
+    database_host: 127.0.0.1
+    database_port: null
+    database_name: newspaper
+    database_user: ''
+    database_password: ''
+    mailer_transport: mail
+    mailer_host: localhost
+    mailer_user: ''
+    mailer_password: ''
+    secret: ThisTokenIsNotSoSecretChangeIt
     pay.client_id: ''
-    pay.redirect_uri: ''
     pay.wallet: ''
     pay.price: 1.00
-    mail.support: mail@mail.ru
-    newspaper.file_path: %kernel.root_dir%/../newspaper.pdf
+    mail.support: "mail@mail.com"
+    newspaper.file_path: %kernel.root_dir%/newspaper.pdf
+
